# SemiModernTrackExtractor

./: README.md
opencv/CVS/: Entries
opencv/_make/: UpgradeLog.htm  opencv.vs2005.sln
opencv/_make/CVS/: Entries
opencv/apps/CVS/: Entries
opencv/apps/CamShiftDemo/CVS/: Entries
opencv/apps/CamShiftDemo/res/CVS/: Entries
opencv/apps/Common/CVS/: Entries
opencv/apps/HMMDemo/CVS/: Entries
opencv/apps/HMMDemo/Res/CVS/: Entries
opencv/apps/HMMDemo/SampleBase/CVS/: Entries
opencv/apps/HaarFaceDetect/CVS/: Entries
opencv/apps/HaarTraining/CVS/: Entries  Repository
opencv/apps/HaarTraining/doc/CVS/: Entries  Repository
opencv/apps/HaarTraining/include/CVS/: Entries  Repository
opencv/apps/HaarTraining/make/CVS/: Entries  Repository
opencv/apps/HaarTraining/src/CVS/: Entries  Repository
opencv/apps/Hawk/CVEiCL/CVS/: Entries
opencv/apps/Hawk/CVS/: Entries
opencv/apps/Hawk/demos/CVS/: Entries
opencv/apps/Hawk/res/CVS/: Entries
opencv/apps/LkDemo/CVS/: Entries
opencv/apps/LkDemo/res/CVS/: Entries
opencv/apps/StereoDemo/CVS/: Entries
opencv/apps/StereoGR/CVS/: Entries
opencv/apps/StereoGR/res/CVS/: Entries
opencv/apps/Tracker3dDemo/CVS/: Entries
opencv/apps/VMDemo/CVS/: Entries
opencv/apps/VMDemo/Media/CVS/: Entries
opencv/apps/VMDemo/res/CVS/: Entries
opencv/apps/cvcsdemo/CVS/: Entries
opencv/apps/cvcsdemo/pictures/CVS/: Entries
opencv/apps/cvenv/CVS/: Entries
opencv/apps/cvenv/EiC/CVS/: Entries
opencv/apps/cvenv/include/CVS/: Entries
opencv/apps/cvenv/pictures/CVS/: Entries
opencv/apps/cvenv/samples/CVS/: Entries
opencv/apps/cvlkdemo/CVS/: Entries
opencv/apps/cvlkdemo/pictures/CVS/: Entries
opencv/apps/vmdemotk/CVS/: Entries
opencv/apps/vmdemotk/media/CVS/: Entries
opencv/autotools/CVS/: Entries
opencv/autotools/aclocal/CVS/: Entries
opencv/autotools/darwin/CVS/: Entries
opencv/cv/CVS/: Entries
opencv/cv/include/CVS/: Entries
opencv/cv/src/: cv.vs2005.vcxproj  cv.vs2005.vcxproj.filters
opencv/cv/src/CVS/: Entries
opencv/cvaux/CVS/: Entries
opencv/cvaux/include/CVS/: Entries
opencv/cvaux/src/: cvaux.vs2005.vcxproj  cvaux.vs2005.vcxproj.filters
opencv/cvaux/src/CVS/: Entries
opencv/cvaux/src/vs/CVS/: Entries
opencv/cxcore/CVS/: Entries
opencv/cxcore/include/CVS/: Entries
opencv/cxcore/src/: cxcore.vs2005.vcxproj  cxcore.vs2005.vcxproj.filters
opencv/cxcore/src/CVS/: Entries
opencv/data/CVS/: Entries
opencv/data/haarcascades/CVS/: Entries
opencv/docs/CVS/: Entries
opencv/docs/HTML/CVS/: Entries
opencv/docs/HTML/Contributors/CVS/: Entries
opencv/docs/appPage/3dTracker/CVS/: Entries
opencv/docs/appPage/CVS/: Entries
opencv/docs/appPage/Calibration/CVS/: Entries  Root
opencv/docs/appPage/CamShift/CVS/: Entries
opencv/docs/appPage/ConDensation/CVS/: Entries
opencv/docs/appPage/FaceRecognition/CVS/: Entries
opencv/docs/appPage/Kalman/CVS/: Entries
opencv/docs/appPage/LKTracker/CVS/: Entries
opencv/docs/papers/CVS/: Entries
opencv/docs/ref/CVS/: Entries
opencv/docs/ref/pics/CVS/: Entries
opencv/docs/vidsurv/CVS/: Entries
opencv/filters/CalibFilter/CVS/: Entries
opencv/filters/CamShift/CVS/: Entries
opencv/filters/Condens/CVS/: Entries
opencv/filters/Kalman/CVS/: Entries
opencv/filters/ProxyTrans/CVS/: Entries
opencv/filters/SyncFilter/CVS/: Entries
opencv/filters/Tracker3dFilter/include/CVS/: Entries  Tag
opencv/interfaces/CVS/: Entries
opencv/interfaces/ch/CVS/: Entries
opencv/interfaces/ipp/CVS/: Entries
opencv/interfaces/matlab/CVS/: Entries
opencv/interfaces/swig/CVS/: Entries
opencv/ml/CVS/: Entries
opencv/ml/include/CVS/: Entries
opencv/ml/src/: ml.vs2005.vcxproj  ml.vs2005.vcxproj.filters
opencv/ml/src/CVS/: Entries
opencv/otherlibs/CVS/: Entries
opencv/otherlibs/GestRec/CVS/: Entries
opencv/otherlibs/PTGrey/CVS/: Entries
opencv/otherlibs/VlGrFmts/CVS/: Entries
opencv/otherlibs/_fltk/CVS/: Entries
opencv/otherlibs/_graphics/CVS/: Entries
opencv/otherlibs/cvcam/CVS/: Entries
opencv/otherlibs/ffopencv/CVS/: Entries
opencv/otherlibs/highgui/: highgui.vs2005.vcxproj  highgui.vs2005.vcxproj.filters
opencv/otherlibs/highgui/CVS/: Entries
opencv/samples/CVS/: Entries
opencv/samples/c/: cvsample.vs2005.vcxproj
opencv/samples/c/CVS/: Entries
opencv/samples/octave/CVS/: Entries
opencv/samples/python/CVS/: Entries
opencv/tests/CVS/: Entries
opencv/tests/cv/CVS/: Entries
opencv/tests/cv/src/: cvtest.vs2005.vcxproj  cvtest.vs2005.vcxproj.filters
opencv/tests/cxcore/CVS/: Entries
opencv/tests/cxcore/src/: cxcoretest.vs2005.vcxproj  cxcoretest.vs2005.vcxproj.filters
opencv/tests/cxts/: cxts.vs2005.vcxproj  cxts.vs2005.vcxproj.filters
opencv/tests/cxts/CVS/: Entries
opencv/tests/octave/CVS/: Entries
opencv/tests/python/CVS/: Entries
opencv/utils/CVS/: Entries
opencv/utils/cvinfo/CVS/: Entries
trackextractor/: .gitignore  CMakeLists.txt
trackextractor/cmake/: findOpenCV.cmake  trackextractorConfig.cmake
trackextractor/extrackt/: CMakeLists.txt  main.cpp  newDLLWrapper.cpp  newDLLWrapper.h
trackextractor/include/tictoc/: tictoc.h
trackextractor/include/trackextractor/: AutoThresholder.h  BatchExtractor.h  ContourPoint.h  CvUtilsPlusPlus.h  FrameLoader.h  ImLoader.h  ImTrackPoint.h  MaggotTrackBuilder.h  MaggotTrackExtractor.h  MaggotTrackPoint.h  PointExtractor.h  TrackExtractor.h  WormPointExtractor.h  communicator.h  trackbuilder.h  trackmatch.h  trackpoint.h
trackextractor/src/: CMakeLists.txt
trackextractor/src/tictoc/: tictoc.cpp
trackextractor/src/trackextractor/: AutoThresholder.cpp  BatchExtractor.cpp  ContourPoint.cpp  CvUtilsPlusPlus.cpp  FrameLoader.cpp  ImLoader.cpp  ImTrackPoint.cpp  MaggotTrackBuilder.cpp  MaggotTrackExtractor.cpp  MaggotTrackPoint.cpp  PointExtractor.cpp  TrackExtractor.cpp  WormPointExtractor.cpp  WormTrackBuilder.cpp  communicator.cpp  track.cpp  trackbuilder.cpp  trackmatch.cpp  trackpoint.cpp
yaml-cpp/: .gitignore  UpgradeLog.htm  yaml-reader.vcxproj  yaml-reader.vcxproj.filters  yamlcpp.sln  yamlcpp.vcxproj  yamlcpp.vcxproj.filters
(+84 files in other folders)
